# tarmac

./: .dockerignore  .env.example  .fcignore  .gitignore  CHANGELOG.md  DEMO.md  README.md  pyproject.toml  requirements.txt
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  codeql.yml  pages.yml
docs/: BENCH.md  friction-log.md
docs/proof/: DEPLOY_PROOF.md  README.md  live_run.db  live_run.verify.txt
examples/: meeting_rooms.py
fixtures/: storm_dfw_seed7.json
infra/ecs/: setup.md
infra/fc/: Dockerfile  handler.py  s.yaml  wsgi.py
python/cffi-2.1.0.dist-info/: RECORD
python/pynacl-1.6.2.dist-info/: RECORD
scripts/: ablation_bench.py  check_submission_readiness.py  verify_offline.py
site/: CNAME  index.html
site/pitch/: index.html
src/tarmac_society/: __init__.py  canonical.py  chainlog.py  cli.py  commitment.py  currency.py  deadlock.py  ledger.py  mediator.py  schemas.py  signing.py  society.py  storage.py  verify.py
src/tarmac_society/qwen/: __init__.py  citations.py  models.py  transport.py
src/tarmac_society/tarmac/: __init__.py  baseline.py  bench.py  metrics.py  personas.py  regs.py  run.py  scenario.py  seed.py
tests/: conftest.py  test_baseline.py  test_bench.py  test_canonical.py  test_chainlog.py  test_cli.py  test_commitment.py  test_currency.py  test_deadlock.py  test_fixture_deadlocks.py  test_invariants.py  test_ledger.py  test_ledger_locking.py  test_mediator_flow.py  test_metrics.py  test_personas.py  test_qwen_transport.py  test_regs.py  test_run.py  test_scenario.py  test_schemas.py  test_signing.py  test_society.py  test_storage.py  test_verify.py
